--- a/app/styles/App.css
+++ b/app/styles/App.css
@@ -2205,6 +2205,8 @@ button {
 .story-post__image, .story-post__content img {
   max-height: 90vh;
   width: auto;
+  height: auto;
+  max-width: 90vw;
 }
 .story-post__time-bar {
   height: 0.5rem;
